--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,10 +1,17 @@
 [theme]
-base="light"
-primaryColor="#0F766E"
-backgroundColor="#FFFFFF"
-secondaryBackgroundColor="#F1F5F9"
-textColor="#0F172A"
-font="sans serif"
+primaryColor = "#1f77b4"
+backgroundColor = "#FFFFFF"
+secondaryBackgroundColor = "#F0F2F6"
+textColor = "#262730"
+font = "sans serif"
 
 [server]
 headless = true
+enableCORS = false
+enableXsrfProtection = true
+
+[browser]
+gatherUsageStats = false
+
+[runner]
+magicEnabled = true
