--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,20 @@ Thumbs.db
 dist/
 build/
 *.egg-info/
+# Streamlit
+.streamlit/secrets.toml
+.streamlit/cache/
+
+# Jupyter
+.ipynb_checkpoints/
+*.ipynb
+
+# Logs
+*.log
+
+# Test files
+test_*.py
+
+# Documentation (implementation notes)
+DATA_SETUP.md
+IMPLEMENTATION_SUMMARY.md
